--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -1,10 +1,10 @@
-name: Polymarket Auto Scanner (Daily 12NL)
+name: Polymarket Auto Scanner (Daily 12NL + Manual)
 
 on:
   schedule:
     # 1× per dag om 10:00 UTC (≈ 12:00 NL in de zomer)
     - cron: "0 10 * * *"
-  workflow_dispatch: {}   # handmatig starten blijft mogelijk
+  workflow_dispatch: {}   # hiermee kun je hem handmatig starten
 
 jobs:
   scan:
